--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-257.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇳🇱 荷兰-238.9KB/s(Youtube:不良林), server: 213.183.51.172, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇺🇸 美国-226.4KB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-284.5KB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 波兰-210.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
   - {name: 🇳🇱 荷兰-547.6KB/s(Youtube:不良林), server: 213.183.59.218, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 波兰-292.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-231.1KB/s(Youtube:不良林), server: 167.88.61.50, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-280.0KB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-813.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-439.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-658.6KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-257.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
-      - 波兰-210.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 波兰-292.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-231.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-280.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-639.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
