--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,14 +7,9 @@ external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-264.8KB/s(Youtube:不良林), server: 167.88.61.50, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇳🇱 荷兰-152.6KB/s(Youtube:不良林), server: 213.183.59.218, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇺🇸 美国-336.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-813.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-7.07MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林), server: 213.183.53.200, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林), server: 213.183.53.200, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-202.5KB/s(Youtube:不良林), server: 213.183.59.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林), server: 213.183.53.202, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林), server: 213.183.53.202, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -23,14 +18,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -38,14 +28,9 @@ proxy-groups:
     proxies:
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -54,14 +39,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,14 +54,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -89,14 +64,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,14 +75,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,14 +95,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-264.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-247.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-813.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-346.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-521.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-202.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
