--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林), server: 213.183.53.202, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林), server: 213.183.53.202, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇳🇱 荷兰-210.4KB/s(Youtube:不良林), server: 213.183.51.172, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇳🇱 荷兰-465.4KB/s(Youtube:不良林), server: 213.183.51.172, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-282.2KB/s(Youtube:不良林), server: 167.88.61.50, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-304.5KB/s(Youtube:不良林), server: 167.88.61.50, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-405.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-524.4KB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-467.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-210.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-465.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
